[package]
name = "frp-plexus"
version = "0.1.0"
edition = "2024"
description = "Shared primitives for the infinite-db frp backend: typed IDs, SPC encoding, types, and values."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joneseysinno/frp-plexus.git"
documentation = "https://docs.rs/frp-plexus"
keywords = ["graph", "id", "spatial", "value", "frp"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
